Add pagination on getting many items
